risks ready to review

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -163,18 +163,18 @@
                 </ul>
                 <!-- Risks -->
                 <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Risks</h3>                    
-                <li><strong class="govuk-tag govuk-tag--orange">In progress</strong> <a class="govuk-link govuk-link--no-visited-state" href="/report/risks/" >Do you need to add any project risks?</a>
+                <li><strong class="govuk-tag govuk-tag--blue">Ready for review</strong> <a class="govuk-link govuk-link--no-visited-state" href="/report/risks/" >Do you need to add any project risks?</a>
                     <ul class="govuk-list govuk-list--bullet">                        
-                        <li><strong class="govuk-tag govuk-tag--orange">In progress</strong> <a class="govuk-link govuk-link--no-visited-state" href="/report/risks/add/" >What is the name of the risk?</a></li>
-                        <li><strong class="govuk-tag govuk-tag--orange">In progress</strong> <a class="govuk-link govuk-link--no-visited-state" href="/report/risks/add/category" >What is the risk category?</a></li>
-                        <li><strong class="govuk-tag govuk-tag--orange">In progress</strong> <a class="govuk-link govuk-link--no-visited-state" href="/report/risks/add/issues" >What might go wrong and what would the outcome be?</a></li>
-                        <li><strong class="govuk-tag govuk-tag--orange">In progress</strong> <a class="govuk-link govuk-link--no-visited-state" href="/report/risks/add/likelihood" >What is the pre-mitigated likelihood score?</a></li>                                
-                        <li><strong class="govuk-tag govuk-tag--orange">In progress</strong> <a class="govuk-link govuk-link--no-visited-state" href="/report/risks/add/impact" >What is the pre-mitigated impact score?</a></li>                                
-                        <li><strong class="govuk-tag govuk-tag--orange">In progress</strong> <a class="govuk-link govuk-link--no-visited-state" href="/report/risks/add/mitigation" >How will you manage the risk?</a></li>                                
-                        <li><strong class="govuk-tag govuk-tag--orange">In progress</strong> <a class="govuk-link govuk-link--no-visited-state" href="/report/risks/add/more" >Do you want to add any more risks?</a></li>
-                        <li><strong class="govuk-tag govuk-tag--orange">In progress</strong> <a class="govuk-link govuk-link--no-visited-state" href="/report/risks/funds/reports-risks" >Project risks</a>    
+                        <li><strong class="govuk-tag govuk-tag--blue">Ready for review</strong> <a class="govuk-link govuk-link--no-visited-state" href="/report/risks/add/" >What is the name of the risk?</a></li>
+                        <li><strong class="govuk-tag govuk-tag--blue">Ready for review</strong> <a class="govuk-link govuk-link--no-visited-state" href="/report/risks/add/category" >What is the risk category?</a></li>
+                        <li><strong class="govuk-tag govuk-tag--blue">Ready for review</strong> <a class="govuk-link govuk-link--no-visited-state" href="/report/risks/add/issues" >What might go wrong and what would the outcome be?</a></li>
+                        <li><strong class="govuk-tag govuk-tag--blue">Ready for review</strong> <a class="govuk-link govuk-link--no-visited-state" href="/report/risks/add/likelihood" >What is the pre-mitigated likelihood score?</a></li>                                
+                        <li><strong class="govuk-tag govuk-tag--blue">Ready for review</strong> <a class="govuk-link govuk-link--no-visited-state" href="/report/risks/add/impact" >What is the pre-mitigated impact score?</a></li>                                
+                        <li><strong class="govuk-tag govuk-tag--blue">Ready for review</strong> <a class="govuk-link govuk-link--no-visited-state" href="/report/risks/add/mitigation" >How will you manage the risk?</a></li>                                
+                        <li><strong class="govuk-tag govuk-tag--blue">Ready for review</strong> <a class="govuk-link govuk-link--no-visited-state" href="/report/risks/add/more" >Do you want to add any more risks?</a></li>
+                        <li><strong class="govuk-tag govuk-tag--blue">Ready for review</strong> <a class="govuk-link govuk-link--no-visited-state" href="/report/risks/funds/reports-risks" >Project risks</a>    
                     </ul>   
-                <li><strong class="govuk-tag govuk-tag--orange">In progress</strong> <a class="govuk-link govuk-link--no-visited-state" href="/report/risks/delete/" >Confirm you want to delete this risk?</a></li>
+                <li><strong class="govuk-tag govuk-tag--blue">Ready for review</strong> <a class="govuk-link govuk-link--no-visited-state" href="/report/risks/delete/" >Confirm you want to delete this risk?</a></li>
                                             
                                
             <!-- <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
