--- a/app/views/report/upload/index.html
+++ b/app/views/report/upload/index.html
@@ -19,7 +19,7 @@
 			<li>don’t do abc to the spreadsheet</li>
       	</ul>
 
-      	<form method="post" action="" >	  
+      	<form method="post" action="/report/upload/uploaded" >	  
 
         	{{ govukFileUpload({
             	id: "reportUpload",
