--- a/app/views/funds/dashboard.html
+++ b/app/views/funds/dashboard.html
@@ -5,7 +5,7 @@
 
 
 {% set pageHeading = "Fund reports" %}
-{% set pageSection = "Warwickshire county council " %}
+{% set pageSection = data.organisationName %}
 {% block pageTitle %}{{ macroPageTitle.pageTitle(pageHeading) }}{% endblock %}
 
 {% block content %}
