--- a/app/views/report/index.html
+++ b/app/views/report/index.html
@@ -5,7 +5,7 @@
 {% set showNav = false %}
 
 {% set pageHeading = "Report progress" %}
-{% set pageSection = 'Pathfinders' %}
+{% set pageSection = data.fundName %}
 {% block pageTitle %}{{ macroPageTitle.pageTitle(pageHeading) }}{% endblock %}
 
 {% block content %}
