--- a/app/views/report/progress/milestones.html
+++ b/app/views/report/progress/milestones.html
@@ -20,7 +20,7 @@
 			<li>organise a ministerial visit</li>
 		</ul>
 
-		<form method="post" action="/report/pathfinders-report?reportSectionOne=complete" >
+		<form method="post" action="/report/?reportSectionOne=complete" >
             
 			{{ govukCharacterCount({
 				name: "projectIssueMeasures",
