--- a/app/views/report/risks/project-risks.html
+++ b/app/views/report/risks/project-risks.html
@@ -96,7 +96,7 @@
 			<p class="govuk-body">You can return to this section at any time to edit it before sending your report.</p>
 		<!-- </div> -->
 		
-		<form method="post" action="/report/pathfinders-report?reportSectionFour=complete" >
+		<form method="post" action="/report/?reportSectionFour=complete" >
             
 			{{ govukButton({
 				text: "Save and complete"
