--- a/app/views/users/index.html
+++ b/app/views/users/index.html
@@ -6,7 +6,7 @@
 {% set showNav = true %}
 
 {% set pageHeading = "Users" %}
-{% set pageSection = "Warwickshire county council" %}
+{% set pageSection = data.organisationName %}
 {% block pageTitle %}{{ macroPageTitle.pageTitle(pageHeading) }}{% endblock %}
 
 {% block content %}
