--- a/app/views/users/edit.html
+++ b/app/views/users/edit.html
@@ -5,7 +5,7 @@
 {% set showNav = true %}
 
 {% set pageHeading = "Kate Harries" %}
-{% set pageSection = "Warwickshire county council" %}
+{% set pageSection = data.organisationName %}
 {% block pageTitle %}{{ macroPageTitle.pageTitle(pageHeading) }}{% endblock %}
 
 
