--- a/app/views/report/check-your-answers.html
+++ b/app/views/report/check-your-answers.html
@@ -34,7 +34,7 @@
 
 		<h2 class="govuk-heading-m">Sending your report</h2>
 
-		<p>You can now send your report to be reviewed by {{ data.section151Name }}, Section 151 officer. They will need to submit the report to Towns Fund by {{ data.fundDate }}.</p>
+		<p>You can now send your report to be reviewed by {{ data.section151Name }}, Section 151 officer. They will need to submit the report to {{ data.fundName }} by {{ data.fundDate }}.</p>
 			<!-- <p class="govuk-body">
 				
 				
