--- a/app/views/sign-off/index.html
+++ b/app/views/sign-off/index.html
@@ -5,7 +5,7 @@
 {% endif %}
 
 {% set pageHeading = "Sign off and submit report" %}
-{% set pageSection = "Towns Fund" %}
+{% set pageSection = data.fundName %}
 {% block pageTitle %}{{ macroPageTitle.pageTitle(pageHeading) }}{% endblock %}
 
 {% block content %}
