rag ratings pattern change

--- a/app/views/report/rag/rag-examples.html
+++ b/app/views/report/rag/rag-examples.html
@@ -19,7 +19,7 @@
       	<h3 class="govuk-heading-m">Green</h3>
       	<ul class="govuk-list govuk-list--bullet">
         	<li>No rising costs</li>
-        	<li>no slippage</li>
+        	<li>No slippage</li>
         	<li>Less than 30% expenditure profiled in final year</li>
         	<li>No use of financial flexibility</li>
       	</ul>
