--- a/app/views/report/locations/add-postcode.html
+++ b/app/views/report/locations/add-postcode.html
@@ -2,7 +2,7 @@
 
 {% set showBackLink = true %}
 
-{% set pageHeading = "What is the postcode for this project?" %}
+{% set pageHeading = "What are the postcodes for this project?" %}
 {% set pageSection = "Project postcodes" %}
 {% block pageTitle %}{{ macroPageTitle.pageTitle(pageHeading) }}{% endblock %}
 
