--- a/app/views/report/locations/change-postcode.html
+++ b/app/views/report/locations/change-postcode.html
@@ -2,7 +2,7 @@
 
 {% set showBackLink = true %}
 
-{% set pageHeading = "What is the new postcode for this project?" %}
+{% set pageHeading = "What are the postcodes for this project?" %}
 {% set pageSection = "Project postcodes" %}
 {% block pageTitle %}{{ macroPageTitle.pageTitle(pageHeading) }}{% endblock %}
 
@@ -94,7 +94,7 @@
 
 			<div class="govuk-button-group">
 				{{ govukButton({
-				  text: "Continue"
+				  text: "Update postcodes"
 				}) }}
 				<!-- {{ govukButton({
 				  text: "Save as draft",
