--- a/app/views/report/risks/add/impact.html
+++ b/app/views/report/risks/add/impact.html
@@ -15,7 +15,12 @@
 		
 		<p>Your answer should be based on the risk level before any mitigations have been put in place. </p>
 	
-		<form method="post" action="/report/risks/add/mitigation" >
+		{% if data['change'] == "active" %}
+			<form method="post" action="/report/risks/project-risks" >
+				{% include "includes/changeStatus.html" %}				
+		{% else %}	
+			<form method="post" action="/report/risks/add/mitigation" >
+		{% endif %}
             
             {{ govukRadios({
 				name: "projectRiskImpactScore",
