--- a/app/views/report/risks/add/issue.html
+++ b/app/views/report/risks/add/issue.html
@@ -12,8 +12,13 @@
 	<div class="govuk-grid-column-two-thirds">
 
     	{{ macroPageHeader.pageHeader(pageHeading,pageSection) }}      
-	
-		<form method="post" action="/report/risks/add/likelihood" >
+		
+		{% if data['change'] == "active" %}
+			<form method="post" action="/report/risks/project-risks" >
+				{% include "includes/changeStatus.html" %}				
+		{% else %}	
+			<form method="post" action="/report/risks/add/likelihood" >
+		{% endif %}
             
            
 
