--- a/app/views/report/risks/project-risks.html
+++ b/app/views/report/risks/project-risks.html
@@ -2,7 +2,11 @@
 
 {% set showBackLink = true %}
 
-{% set pageHeading = "Risks across your projects" %}
+{% if data['projecRisks'] != "No" %}
+	{% set pageHeading = "Risks across your projects" %}
+{% else %}
+	{% set pageHeading = "Risks across your projects" %}
+{% endif %}
 {% set pageSection = "Risks" %}
 {% block pageTitle %}{{ macroPageTitle.pageTitle(pageHeading) }}{% endblock %}
 
@@ -27,16 +31,8 @@
 
     	{{ macroPageHeader.pageHeader(pageHeading,pageSection) }}      
 		
-
-		
-
-
-
 		{% if data['projecRisks'] != "No" %}
-		<p class="govuk-body"><a class="gouvk-link govuk-link--no-visited-state" href="/report/risks/add/">Add another risk</a></p>
-		{% else %}
-		<p>You have told us you do not have any risks across your projects. </p>
-
+			<p class="govuk-body"><a class="gouvk-link govuk-link--no-visited-state" href="/report/risks/add/">Add another risk</a></p>					
 		{% endif %}
 
 		
@@ -62,27 +58,27 @@
 					{
 						key: { text: "Category" },
 						value: { text: data.projectRiskCategory  },
-						actions: { items: [ { href: "#", text: "Change", visuallyHiddenText: "category of risk" } ] }
+						actions: { items: [ { href: "/report/risks/add/category?change=active", text: "Change", visuallyHiddenText: "category of risk" } ] }
 					},
 					{
 						key: { text: "Why this is a risk" },
 						value: { text: data.projectRiskOutcome },
-						actions: { items: [ { href: "#", text: "Change", visuallyHiddenText: "description of what could go wrong" } ] }
+						actions: { items: [ { href: "/report/risks/add/issue?change=active", text: "Change", visuallyHiddenText: "description of what could go wrong" } ] }
 					},
 					{
 						key: { text: "Pre-mitigated likelihood" },
 						value: { text: data.projectRiskScore },
-						actions: { items: [ { href: "#", text: "Change", visuallyHiddenText: "likelihood score" } ] } 
+						actions: { items: [ { href: "/report/risks/add/likelihood?change=active", text: "Change", visuallyHiddenText: "likelihood score" } ] } 
 					},
 					{
 						key: { text: "Pre-mitigated impact" },
 						value: { text: data.projectRiskImpactScore },
-						actions: { items: [ { href: "#", text: "Change", visuallyHiddenText: "impact score" } ] } 
+						actions: { items: [ { href: "/report/risks/add/impact?change=active", text: "Change", visuallyHiddenText: "impact score" } ] } 
 					},
 					{
 						key: { text: "How the risk will be managed" },
 						value: { text: data.projectRiskMitigation },
-						actions: { items: [ { href: "#", text: "Change", visuallyHiddenText: "how you will manage the risk" } ] } 
+						actions: { items: [ { href: "/report/risks/add/mitigation?change=active", text: "Change", visuallyHiddenText: "how you will manage the risk" } ] } 
 					}					
 				]
 			}) }}    	
@@ -92,14 +88,20 @@
 	</div>
 	<div class="govuk-grid-column-two-thirds">
 			
-		<!-- <div class="govuk-inset-text"> -->
-			<p class="govuk-body">You can return to this section at any time to edit it before sending your report.</p>
-		<!-- </div> -->
+			{% if data['projecRisks'] == "No" %}
+			<p class="govuk-body">You have told us you do not have any risks across your projects.</p>
+			{% endif %}
+
+		<div class="govuk-inset-text">
+			<p class="govuk-body">Return to edit this section at any time before sending your report.</p>
+			<!-- <p class="govuk-body">You can return to this section at any time to edit it before sending your report.</p> -->
+		</div>
 		
-		<form method="post" action="/report/?reportSectionFour=complete" >
+		<form method="post" action="/report/?reportSectionRisks=complete" >
             
 			{{ govukButton({
-				text: "Save and complete"
+				text: "Save and complete",
+				classes: "govuk-!-margin-top-5"
 			}) }}
 			
 		</form>
