--- a/app/views/report/risks/project-risks.html
+++ b/app/views/report/risks/project-risks.html
@@ -49,50 +49,22 @@
 	</div>
     <div class="govuk-grid-column-full govuk-!-margin-top-3">
 
-
-
-			{% if data['projecRisks'] != "No" %}
-        	
-		
+		{% if data['projecRisks'] != "No" %}
+				
 			{{ govukSummaryList({
 				card: {
 				title: { text: data.projectRiskTitle },
-				actions: {
-					items: [
-						{ href: "/report/risks/delete/", text: "Delete risk", visuallyHiddenText: "from the list" }				  
-					]
-				  }
-				},
+				actions: { items: [ { href: "/report/risks/delete/", text: "Delete risk", visuallyHiddenText: "from the list" } ] } },
 				rows: [					
-					{
-						key: { text: "Category" },
-						value: { text: data.projectRiskCategory  },
-						actions: { items: [ { href: "/report/risks/add/category?change=active", text: "Change", visuallyHiddenText: "category of risk" } ] }
-					},
-					{
-						key: { text: "Why this is a risk" },
-						value: { text: data.projectRiskOutcome },
-						actions: { items: [ { href: "/report/risks/add/issue?change=active", text: "Change", visuallyHiddenText: "description of what could go wrong" } ] }
-					},
-					{
-						key: { text: "Pre-mitigated likelihood" },
-						value: { text: data.projectRiskScore },
-						actions: { items: [ { href: "/report/risks/add/likelihood?change=active", text: "Change", visuallyHiddenText: "likelihood score" } ] } 
-					},
-					{
-						key: { text: "Pre-mitigated impact" },
-						value: { text: data.projectRiskImpactScore },
-						actions: { items: [ { href: "/report/risks/add/impact?change=active", text: "Change", visuallyHiddenText: "impact score" } ] } 
-					},
-					{
-						key: { text: "How the risk will be managed" },
-						value: { text: data.projectRiskMitigation },
-						actions: { items: [ { href: "/report/risks/add/mitigation?change=active", text: "Change", visuallyHiddenText: "how you will manage the risk" } ] } 
-					}					
+					{ key: { text: "Category" }, value: { text: data.projectRiskCategory  }, actions: { items: [ { href: "/report/risks/add/category?change=active", text: "Change", visuallyHiddenText: "category of risk" } ] } },
+					{ key: { text: "Why this is a risk" }, value: { text: data.projectRiskOutcome }, actions: { items: [ { href: "/report/risks/add/issue?change=active", text: "Change", visuallyHiddenText: "description of what could go wrong" } ] } },
+					{ key: { text: "Pre-mitigated likelihood" }, value: { text: data.projectRiskScore }, actions: { items: [ { href: "/report/risks/add/likelihood?change=active", text: "Change", visuallyHiddenText: "likelihood score" } ] }  },
+					{ key: { text: "Pre-mitigated impact" }, value: { text: data.projectRiskImpactScore }, actions: { items: [ { href: "/report/risks/add/impact?change=active", text: "Change", visuallyHiddenText: "impact score" } ] }  },
+					{ key: { text: "How the risk will be managed" }, value: { text: data.projectRiskMitigation }, actions: { items: [ { href: "/report/risks/add/mitigation?change=active", text: "Change", visuallyHiddenText: "how you will manage the risk" } ] }  }					
 				]
-			}) }}    	
+			}) }}			
 
-			{% endif %}
+		{% endif %}
 
 	</div>
 	<div class="govuk-grid-column-two-thirds">
@@ -109,7 +81,7 @@
 		<form method="post" action="/report/?reportSectionRisks=complete" >
             
 			{{ govukButton({
-				text: "Save and complete",
+				text: "Save and continue",
 				classes: "govuk-!-margin-top-5"
 			}) }}
 			
