--- a/app/views/report/locations/postcodes.html
+++ b/app/views/report/locations/postcodes.html
@@ -55,7 +55,7 @@
             ]
         }) }}
 
-        <form method="post" action="/report/" >        
+        <form method="post" action="/report/?reportSectionPostcodes=complete" >        
 				
             {{ govukButton({
 				text: "Save and continue"
