--- a/app/views/report/progress/activity-completion-date.html
+++ b/app/views/report/progress/activity-completion-date.html
@@ -18,8 +18,8 @@
 		<form method="post" action="/report/progress/practical-completion-date" >
             
 			{{ govukDateInput({
-				id: "adminActivityCompletionDate",
-				namePrefix: "adminActivityCompletionDate",
+				id: "progressActivityDate",
+				namePrefix: "progressActivityDate",
 				fieldset: {
 					legend: {
 						text: pageHeading,
