--- a/app/views/report/progress/practical-completion-date.html
+++ b/app/views/report/progress/practical-completion-date.html
@@ -18,8 +18,8 @@
 		<form method="post" action="/report/progress/delivery" >
             
 			{{ govukDateInput({
-				id: "adminPracticalCompletionDate",
-				namePrefix: "adminPracticalCompletionDate",
+				id: "progressPracticalDate",
+				namePrefix: "progressPracticalDate",
 				fieldset: {
 					legend: {
 						text: pageHeading,
@@ -29,7 +29,7 @@
 				},
 				hint: {
 					text: "For example, 27 3 2024"
-				}
+				}				
 			}) }}                 
 
 			
