--- a/app/views/report/progress/completion-date.html
+++ b/app/views/report/progress/completion-date.html
@@ -18,8 +18,8 @@
 		<form method="post" action="/report/progress/activity-completion-date" >
             
 			{{ govukDateInput({
-				id: "adminCompletionDate",
-				namePrefix: "adminCompletionDate",
+				id: "progressPracticalDate",
+				namePrefix: "progressFinancialDate",
 				fieldset: {
 					legend: {
 						text: pageHeading,
