--- a/app/views/report/progress/issues.html
+++ b/app/views/report/progress/issues.html
@@ -23,8 +23,8 @@
 		<form method="post" action="/report/progress/milestones" >
             
 			{{ govukCharacterCount({
-				name: "projectIssueMeasures",
-				id: "projectIssueMeasures",
+				name: "progressIssues",
+				id: "progressIssues",
 				maxwords: 500,
 				label: {
 				  text: "Can you provide more detail?",
@@ -33,7 +33,8 @@
 				},
 				hint: {
 				  text: ""
-				}
+				},
+				value: data.progressIssues
 			}) }} 
 			
 			{{ govukButton({
