--- a/app/views/report/rag/rag-ratings.html
+++ b/app/views/report/rag/rag-ratings.html
@@ -78,7 +78,7 @@
             }            
         }) }}
 
-        <form method="post" action="/report/locations/" >        
+        <form method="post" action="/report/?reportSectionRAG=complete" >                   
 				
             {{ govukButton({
 				text: "Continue",
