--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -3,6 +3,10 @@
 // https://prototype-kit.service.gov.uk/docs/adding-css-javascript-and-images
 // 
 
+$govuk-new-typography-scale: true;
+$govuk-new-organisation-colours: true;
+@import "govuk-frontend/all";
+
 // Add extra styles here
 
 
