--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -5,7 +5,7 @@
 
 $govuk-new-typography-scale: true;
 $govuk-new-organisation-colours: true;
-@import "govuk-frontend/all";
+@import "govuk-frontend/index";
 
 // Add extra styles here
 
