removed the tags from the find tab

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -320,11 +320,11 @@
         {% set findHtml %}            
             <h2 class="govuk-heading-s govuk-!-margin-bottom-2">Find monitoring data</h2>            
             <ul class="govuk-list govuk-list--bullet">                
-                <li><strong class="govuk-tag govuk-tag--turquoise">Ready for dev</strong>  <a class="govuk-link govuk-link--no-visited-state" href="/get-monitoring-data/download-data" >Get monitoring and evaluation data</a></li>
-                <li><strong class="govuk-tag govuk-tag--turquoise">Ready for dev</strong>  <a class="govuk-link govuk-link--no-visited-state" href="/get-monitoring-data/confirmation" >Request received</a></li>
-                <li><strong class="govuk-tag govuk-tag--turquoise">Ready for dev</strong>  <a class="govuk-link govuk-link--no-visited-state" href="/emails/get-data" >Email: Monitoring and evaluation data</a></li>
-                <li><strong class="govuk-tag govuk-tag--turquoise">Ready for dev</strong>  <a class="govuk-link govuk-link--no-visited-state" href="/get-monitoring-data/download-file" >Your data is ready to be downloaded</a></li>
-                <li><strong class="govuk-tag govuk-tag--turquoise">Ready for dev</strong>  <a class="govuk-link govuk-link--no-visited-state" href="/get-monitoring-data/download-file-expired" >Your link to download data has expired</a></li>
+                <li><a class="govuk-link govuk-link--no-visited-state" href="/get-monitoring-data/download-data" >Get monitoring and evaluation data</a></li>
+                <li><a class="govuk-link govuk-link--no-visited-state" href="/get-monitoring-data/confirmation" >Request received</a></li>
+                <li><a class="govuk-link govuk-link--no-visited-state" href="/emails/get-data" >Email: Monitoring and evaluation data</a></li>
+                <li><a class="govuk-link govuk-link--no-visited-state" href="/get-monitoring-data/download-file" >Your data is ready to be downloaded</a></li>
+                <li><a class="govuk-link govuk-link--no-visited-state" href="/get-monitoring-data/download-file-expired" >Your link to download data has expired</a></li>
             </ul>              
         {% endset -%}  
 
